--- a/projects/sugam-business-park.html
+++ b/projects/sugam-business-park.html
@@ -221,21 +221,21 @@
                     <div class="row">
                         <div class="col-lg-6 no-bullets">
                             <ul>
-                                <li> <span> <img style="width: 60px; padding-bottom: 10px;" src="/assets/images/buisness-park/amenities1.png" alt=""> </span> B+G+10 Building</li>
-                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="/assets/images/buisness-park/amenities2.png" alt=""> </span>Floor to Ceiling Height (3.96 M)</li>
-                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="/assets/images/buisness-park/amenities3.png" alt=""> </span>Car & Bike Parking</li>
-                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="/assets/images/buisness-park/amenities4.png" alt=""> </span>Furnished Available</li>
-                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="/assets/images/buisness-park/amenities5.png" alt=""> </span>D.G. Service (24 hrs)</li>
-                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="/assets/images/buisness-park/amenities6.png" alt=""> </span>Centrally Air Conditioned</li>
+                                <li> <span> <img style="width: 60px; padding-bottom: 10px;" src="../assets/images/buisness-park/amenities1.png" alt=""> </span> B+G+10 Building</li>
+                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="../assets/images/buisness-park/amenities2.png" alt=""> </span>Floor to Ceiling Height (3.96 M)</li>
+                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="../assets/images/buisness-park/amenities3.png" alt=""> </span>Car & Bike Parking</li>
+                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="../assets/images/buisness-park/amenities4.png" alt=""> </span>Furnished Available</li>
+                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="../assets/images/buisness-park/amenities5.png" alt=""> </span>D.G. Service (24 hrs)</li>
+                                <li><span> <img style="width: 60px;  padding-bottom: 10px;" src="../assets/images/buisness-park/amenities6.png" alt=""> </span>Centrally Air Conditioned</li>
                             </ul>
                         </div>
                         <div class="col-lg-6 no-bullets">
                             <ul>
-                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="/assets/images/buisness-park/amenities7.png" alt=""> </span>Two Elevators (16 pax)</li>
-                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="/assets/images/buisness-park/amenities8.png" alt=""> </span>24x7 Facility Support</li>
-                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="/assets/images/buisness-park/amenities9.png" alt=""> </span>Columnless Structure</li>
-                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="/assets/images/buisness-park/amenities10.png" alt=""> </span>Water Filtration Plant</li>
-                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="/assets/images/buisness-park/amenities11.png" alt=""> </span>NDITA Water Supply</li>
+                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="../assets/images/buisness-park/amenities7.png" alt=""> </span>Two Elevators (16 pax)</li>
+                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="../assets/images/buisness-park/amenities8.png" alt=""> </span>24x7 Facility Support</li>
+                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="../assets/images/buisness-park/amenities9.png" alt=""> </span>Columnless Structure</li>
+                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="../assets/images/buisness-park/amenities10.png" alt=""> </span>Water Filtration Plant</li>
+                                <li><span> <img style="width: 60px; padding-bottom: 10px;" src="../assets/images/buisness-park/amenities11.png" alt=""> </span>NDITA Water Supply</li>
                             </ul>
                         </div>
                     </div>
