--- a/projects/morya.html
+++ b/projects/morya.html
@@ -161,6 +161,48 @@
             <div class="text-center mt-5 book-online">
                 <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
             </div>
+            <!-- contact us side -->
+            <div class="text-center mt-5 book-online-1">
+                <a data-toggle="modal" data-target="#exampleModal5" href="" class="btn btn-custom">Contact Us</a>
+            </div>
+            <!-- Contact us side modal -->
+            <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">
+                        Thank you for Enquiring About Morya
+                      </h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Name *</label>
+                          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Mobile Number *</label>
+                          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleFormControlTextarea1">Message *</label>
+                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-custom">
+                          Submit
+                        </button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
             <!-- OVERVIEW -->
             <div class="overview">
