--- a/growth_partners/channel-partner.html
+++ b/growth_partners/channel-partner.html
@@ -187,8 +187,8 @@
         <h2 class="mt-4">Shake hands with a legacy</h2>
         <p>
           - Building Happy Communities since 1986 <br />
-          - 25+ Projects. 11 million sq.ft. under development.
-          Over 7000 Happy Residents.<br />
+          - 25+ Projects. 11 million sq.ft. under development. 
+          Over 7000 Happy Residents.30+ Awards<br />
           - Pioneers in affordable luxury in Eastern India<br />
           - Collaboration with specialists from around the world<br />
           - Sugam Homes - Times Business Awards 2020 - Times Pioneers in Budget Homes<br/>
