--- a/projects/prakriti.html
+++ b/projects/prakriti.html
@@ -331,7 +331,7 @@
 
           <!-- download brochure -->
           <div class="tab-pane fade" id="DOWNLOAD-BROCHURE" role="tabpanel" aria-labelledby="contact-tab">
-            <h4 class="font-weight-bold">Download Urban-Lakes Brochure</h4>
+            <h4 class="font-weight-bold">Download Prakriti Brochure</h4>
             <!-- <a href="#" class="btn btn-custom text-white"> -->
             <button type="button" class="btn btn-custom" data-toggle="modal" data-target="#exampleModal4">
               DOWNLOAD BROCHURE
