--- a/projects/sugam-habitat.html
+++ b/projects/sugam-habitat.html
@@ -264,11 +264,17 @@
                                 /></a>
                                 Living Room
                             </div>
-                            <div class="col-lg-3">
+                            <!-- <div class="col-lg-3">
                                 <a href="../assets/images/habitat/DINING_2015.12.03.jpg" title=""
                                     ><img src="../assets/images/habitat/DINING_2015.12.03.jpg"
                                 /></a>
                                 Dining Space
+                            </div> -->
+                            <div class="col-lg-3">
+                                <a href="../assets/images/habitat/LIVING_ROOM_2015.12.03.jpg" title=""
+                                    ><img src="../assets/images/habitat/LIVING_ROOM_2015.12.03.jpg"
+                                /></a>
+                                Lobby
                             </div>
                             <div class="col-lg-3">
                                 <a href="../assets/images/habitat/games_room_v4.jpg" title=""
@@ -277,7 +283,7 @@
                                 Indoor games
                             </div>
                         </div>
-                        <div class="row mt-4">
+                        <!-- <div class="row mt-4">
                             <div class="col-lg-3">
                                 <a href="../assets/images/habitat/LIVING_ROOM_2015.12.03.jpg" title=""
                                     ><img src="../assets/images/habitat/LIVING_ROOM_2015.12.03.jpg"
@@ -286,7 +292,7 @@
                             </div>
                             <div class="col-lg-3"></div>
                             <div class="col-lg-3"></div>
-                        </div>
+                        </div> -->
                         <div class="row mt-4">
                             <div class="col-lg-4">
                                 <ul class="">
