--- a/projects/sugam-park.html
+++ b/projects/sugam-park.html
@@ -149,7 +149,10 @@
         <div id="urban_lakes">
             <div class="hero">
                 <div class="container text-center">
-                    <img src="../assets/images/park/Sugam-Park-new.jpg" alt="" width="100%" height="auto" />
+                    <div class="urban_lakes_banner mt-5">
+                        <img src="../assets/images/park/Sugam-Park-new.jpg" alt="" width="100%" height="auto" />
+                        <img src="../assets/images/park/Sugam-Park-new-1.jpg" alt="" width="100%" height="auto" />
+                    </div>
 
                     <img src="../assets/images/park/Sugampark.png" alt="" />
                 </div>
@@ -168,6 +171,7 @@
                         your requirements within your budget.
                     </p>
                     <h4 class="font-weight-bold">Get free Parking with every Flat. Last few units left. Hurry!</h4>
+                    <img class="mt-2" src="../assets/images/park/banner001.jpg" alt="" width="100%" height="auto" />
                     <ul class="list mt-2 p-3">
                         <li class="lifloat">Club house</li>
                         <li class="lifloat">Children’s play area (outdoor &amp; indoor)</li>
@@ -195,7 +199,7 @@
                     <iframe
                         width="100%"
                         class="mt-5"
-                        src="https://www.youtube.com/embed/kfxgb8gDHNQ"
+                        src="https://www.youtube.com/embed/Uzu0qMOVtvM?enablejsapi=1&origin=https%3A%2F%2Fcampaign.sugamhomes.com"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -475,7 +479,7 @@
                 <div class="container text-center">
                     <hr />
                     <br />
-                    <a href="tel:+916366782356">Enquiries: +916366782356</a> <br />
+                    <a href="tel:+916366782356">Enquiries: +91 6366782356</a> <br />
                     <a href="mailto:sales@sugamhomes.com">sales@sugamhomes.com</a>
                 </div>
             </div>
