--- a/projects/morya.html
+++ b/projects/morya.html
@@ -653,7 +653,7 @@
                 <div class="container text-center">
                     <hr />
                     <br />
-                    <a href="tel:916366782350">Enquiries: +916366782350</a> <br />
+                    <a href="tel:916366782350">Enquiries: +91 6366782350</a> <br />
                     <a href="mailto:morya@sugamhomes.com">morya@sugamhomes.com</a>
                 </div>
             </div>
