--- a/projects/sugam-business-park.html
+++ b/projects/sugam-business-park.html
@@ -398,7 +398,7 @@
                     <br />
                     <h5 class="font-weight-bold">Sugam Group</h5>
                     <p>2/5, Sarat Bose Road, Unit No. 1F, Kolkata – 700020</p>
-                    <a href="tel:8068970910">Enquiries: +918068970910</a> <br />
+                    <a href="tel:8068970910">Enquiries: +91 8068970910</a> <br />
                     <a href="mailto:dipra@sugamhomes.com">dipra@sugamhomes.com</a>
                 </div>
             </div>
