--- a/projects/sugam-habitat.html
+++ b/projects/sugam-habitat.html
@@ -186,7 +186,7 @@
                 <div class="container">
                     <h2 class="font-weight-bold text-theme">Tower 7</h2>
                     <div class="line"></div>
-                    <img class="mt-4" src="../assets/images/habitat/carousel2.jpg" alt="banner1" />
+                    <img class="mt-4" src="../assets/images/habitat/carousel2.jpg" alt="banner1" width="100%" height="auto"/>
                 </div>
             </div>
             <!-- workthrough -->
