--- a/projects/sugam-serenity.html
+++ b/projects/sugam-serenity.html
@@ -643,7 +643,7 @@
         <div class="container text-center">
           <hr />
           <br />
-          <a href="tel:80660 84356">Enquiries: 80660 84356</a> <br />
+          <a href="tel:+9180660 84356">Enquiries: +91 8066084356</a> <br />
           <a href="mailto:habitat@sugamhomes.com"
             >sugamserenity@sugamhomes.com</a
           >
