--- a/projects/sugam-sudhir.html
+++ b/projects/sugam-sudhir.html
@@ -737,7 +737,7 @@
         <div class="container text-center">
           <hr />
           <br />
-          <a href="tel:8066084373">Enquiries: 80660 84373</a> <br />
+          <a href="tel:+918066084373">Enquiries: +91 8066084373</a> <br />
           <a href="mailto:habitat@sugamhomes.com">sugamsudhir@sugamhomes.com</a>
         </div>
       </div>
